syntax = "proto3";
package ClassIsland.Shared.IPC.Protobuf.Enum;
option csharp_namespace = "ClassIsland.Shared.IPC.Protobuf.Enum";

enum CommandTypes {
  DefaultCommand=0;
  // Misc
  ServerConnected=1;
  // Heartbeat
  Ping=2;
  Pong=3;
  // Commands
  RestartApp=4;
  SendNotification=5;
  DataUpdated=6;
}